--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="300dp"
+      android:layout_width="match_parent"
       android:layout_marginTop="160dp"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
