--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,46 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320dp"
-    android:layout_height="90dp"
-    android:orientation="vertical"
-    android:layout_weight="45"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="20dp"
-    android:padding="15dp"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="5dp"
     android:background="@drawable/customshapeforhome"
-    >
+    android:orientation="horizontal"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="0dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="80dp"
-        android:padding="10dp"
-        card_view:cardPreventCornerOverlap="false"
-        xmlns:card_view="http://schemas.android.com/tools"
-        android:elevation="10dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/customshapeforhome"
+        android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/image"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
+            android:layout_width="70dp"
             android:src="@drawable/bg"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="3dp"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#bb3653"/>
+            android:layout_height="80dp"
+            android:layout_marginRight="8dp"
+             />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="50dp"
-            android:textSize="26dp"
-            android:padding="5dp"
-            android:textColor="#363c3f"
-            android:id="@+id/text" />
+            android:id="@+id/text"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="90dp"
+            android:textStyle="normal" />
 
-
-    </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
